--- a/eurex.ipynb
+++ b/eurex.ipynb
@@ -16,12 +16,7 @@
     "from pyhtml2pdf import  converter\n",
     "import shutil\n",
     "import json\n",
-    "from plotly.colors import n_colors\n",
-    "\n",
-    "import mimetypes\n",
-    "import os\n",
-    "import smtplib\n",
-    "from email.message import EmailMessage"
+    "from plotly.colors import n_colors"
    ]
   },
   {
@@ -5017,150 +5012,6 @@
     "    converter.convert(\"file://\" + os.path.join(os.getcwd(),result_html), pdf_file)\n",
     "print(\"PDF has been generated.\")"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sixth stage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def send_mail(send_from: str, send_to: list, subject: str, body: str, filepath : str, smtp_url, port, username, password):\n",
-    "\n",
-    "    # Create the email message\n",
-    "    msg = EmailMessage()\n",
-    "    msg['Subject'] = subject\n",
-    "    msg['From'] = send_from\n",
-    "    msg['To'] = ', '.join(send_to)\n",
-    "    # Set email content\n",
-    "    msg.set_content(message)\n",
-    "\n",
-    "    path = directory + filename\n",
-    "\n",
-    "    if os.path.exists(path):\n",
-    "        ctype, encoding = mimetypes.guess_type(path)\n",
-    "        if ctype is None or encoding is not None:\n",
-    "            # No guess could be made, or the file is encoded (compressed), so\n",
-    "            # use a generic bag-of-bits type.\n",
-    "            ctype = 'application/octet-stream'\n",
-    "        maintype, subtype = ctype.split('/', 1)\n",
-    "        # Add email attachment\n",
-    "        with open(path, 'rb') as fp:\n",
-    "            msg.add_attachment(fp.read(),\n",
-    "                           maintype=maintype,\n",
-    "                           subtype=subtype,\n",
-    "                           filename=filename)\n",
-    "\n",
-    "    smtp = smtplib.SMTP(smtp_url, port)\n",
-    "    smtp.starttls()\n",
-    "    smtp.login(username, password)\n",
-    "    smtp.send_message(msg)\n",
-    "    smtp.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msg = EmailMessage()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./Results\\\\eurex.pdf', './Results/Old\\\\eurex_2023_09_01.pdf']"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list_pdf_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "almeidabarrosdf@gmail.com\n",
-      "dummy_eurex@outlook.com\n"
-     ]
-    }
-   ],
-   "source": [
-    "for email in list_emails:\n",
-    "    credentials = list_credentials[email['from']]\n",
-    "    smtp_config = list_emails_providers[credentials['provider']]['smtp']\n",
-    "    if list_conditions[email['condition']]:\n",
-    "        send_mail(\n",
-    "            send_from = email['from'],\n",
-    "            send_to = email['mailto'],\n",
-    "            subject = email['subject'],\n",
-    "            body = open(os.path.join(email_messages_path,email['text']),encoding=\"UTF-8\").read(),\n",
-    "            directory = './',\n",
-    "            filename = 'requirements.txt',\n",
-    "            smtp_url = smtp_config['server'],\n",
-    "            port = smtp_config['port'],\n",
-    "            username = email['from'], \n",
-    "            password = credentials['password']\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# construct Outlook application instance\n",
-    "outlook = client.Dispatch('Outlook.Application')\n",
-    "\n",
-    "if check_emails_available_outlook(outlook, [email['from'] for email in list_emails]):\n",
-    "    print(\"All e-mails to send from are available on the outlook session.\")\n",
-    "\n",
-    "    \n",
-    "for email in list_emails:\n",
-    "    if list_conditions[email['condition']]:\n",
-    "        account = outlook.Session.Accounts[email['from']]\n",
-    "        # construct the email item object\n",
-    "        message = outlook.CreateItem(0)\n",
-    "        message.Subject = email['subject']\n",
-    "        message.Body = open(os.path.join(email_messages_path,email['text']),encoding=\"UTF-8\").read()\n",
-    "        message.To = \";\".join(email['mailto'])\n",
-    "        message._oleobj_.Invoke(*(64209, 0, 8, 0, account))\n",
-    "        message.Attachments.Add(os.path.join(os.getcwd(), 'requirements.txt'))\n",
-    "        #message.Display()\n",
-    "        message.Save()\n",
-    "        message.Send()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
