Fix errors and compare to excel

--- a/eurex.ipynb
+++ b/eurex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,43 +21,289 @@
     "from bs4 import BeautifulSoup\n",
     "import traceback\n",
     "from utils import read_pickle, save_as_pickle\n",
-    "from generate_files import generate_pdfs"
+    "from generate_files import generate_pdfs, generate_parquets\n",
+    "from openpyxl.reader.excel import load_workbook\n",
+    "from openpyxl.utils.cell import coordinate_to_tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_prod_bus = read_pickle(os.path.join(temp_results_path, f'dict_prod_bus.pickle'))\n",
-    "list_email_send = read_pickle(os.path.join(temp_results_path, f'list_email_send.pickle'))"
+    "# openpyxl will complain because extension is not .xlsx\n",
+    "\n",
+    "auswahl = 1\n",
+    "excel_path = \"./excel_files/STOXX_OI-Abfrage 2023-09-06 V9.00.xlsm\"\n",
+    "\n",
+    "#auswahl = 0\n",
+    "#excel_path = \"./excel_files/EUREX 2023-08-28.xlsm\"\n",
+    "\n",
+    "\n",
+    "wb = load_workbook(excel_path, data_only=True, keep_vba=True)\n",
+    "Ueberhaenge_sheet = wb['Ueberhaenge']\n",
+    "heute = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"G5\")).value\n",
+    "expiry = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"G3\")).value\n",
+    "expiry_1 = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"R6\")).value\n",
+    "stock_price = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"X4\")).value\n",
+    "InterestRate = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"N3\")).value\n",
+    "ZentralKurs =  Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"C3\")).value   #round(stock_price/span)*span\n",
+    "\n",
+    "tage_bis_verfall = (expiry - heute).days #+ 1\n",
+    "\n",
+    "print(f\"tage_bis_verfall = {tage_bis_verfall}\")\n",
+    "print(f\"stock_price = {stock_price}\")\n",
+    "print(f\"InterestRate = {InterestRate}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "dict_auswahl_prefix = {\n",
+    "    0 : \"\",\n",
+    "    1 : \"STOXX_\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "dict_prod_bus = {}\n",
+    "for productdate_idx in [0,1]:\n",
+    "    dict_prod_bus[productdate_idx] = {}\n",
+    "    for busdate_idx in [0,1]:\n",
+    "        print(f\"busdate_idx = {busdate_idx}   | productdate_idx = {productdate_idx}\")\n",
+    "        if (busdate_idx == 1) and (productdate_idx == 1):\n",
+    "            # No need to request data for this case so we skip this iteration\n",
+    "            break\n",
+    "\n",
+    "        if (busdate_idx == 0) and (productdate_idx == 0):\n",
+    "            contractsCall_aux_df =  pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}Call_Front\")\n",
+    "            contractsPut_aux_df =  pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}Put_Front\")\n",
+    "\n",
+    "        if (busdate_idx == 1) and (productdate_idx == 0):\n",
+    "            contractsCall_aux_df= pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}CallFront-1\")\n",
+    "            contractsPut_aux_df = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}PutFront-1\")\n",
+    "\n",
+    "        if (busdate_idx == 0) and (productdate_idx == 1):\n",
+    "            contractsCall_aux_df = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}Put+01\")\n",
+    "            contractsPut_aux_df= pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}Call+01\")\n",
+    "\n",
+    "\n",
+    "        aux_df = contractsCall_aux_df[['strike','openInterest']].merge(\n",
+    "            contractsPut_aux_df[['strike','openInterest']],\n",
+    "            on = \"strike\",\n",
+    "            how=\"left\",\n",
+    "            suffixes=('_CF', '_PF')\n",
+    "        )\n",
+    "        dict_prod_bus[productdate_idx][busdate_idx] = aux_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PDF has been generated.\n",
-      "PDF has been generated.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "list_email_send = read_pickle(os.path.join(temp_results_path, f'list_email_send.pickle'))\n",
-    "list_options = []\n",
-    "for email in list_emails:\n",
-    "    if email['id'] in list_email_send:\n",
-    "        list_options.append(dict_stock_index[email['index']])\n",
-    "list_options = set(list_options)\n",
+    "print(f\"heute = {heute}\")\n",
+    "# Create results folder in case they still were not created\n",
+    "list_folder_results =  [current_results_path, old_results_path, temp_results_path]\n",
+    "for folder in list_folder_results:\n",
+    "    create_folder(folder)\n",
     "\n",
-    "for option in list_options:\n",
-    "    generate_pdfs(option)"
+    "\n",
+    "if auswahl == 0: # DAX\n",
+    "    Spannweite = 2000\n",
+    "    Schritt = 50\n",
+    "    volatility_Laufzeit = 60\n",
+    "    KontraktWert = 5\n",
+    "\n",
+    "else: # STOXX\n",
+    "    Spannweite = 700\n",
+    "    Schritt = 25\n",
+    "    volatility_Laufzeit = 365\n",
+    "    KontraktWert = 1\n",
+    "\n",
+    "span = (Spannweite/4)\n",
+    "\n",
+    "Minkurs = ZentralKurs - (Spannweite/ 2)\n",
+    "\n",
+    "Maxkurs = Minkurs + Spannweite\n",
+    "Schritte = int(Spannweite / Schritt)\n",
+    "\n",
+    "DetailMin = round(stock_price - (Spannweite)/4)\n",
+    "DetailMax = DetailMin + (Spannweite/2)\n",
+    "\n",
+    "\n",
+    "if tage_bis_verfall >= 1:\n",
+    "    delta = 0.5\n",
+    "else:\n",
+    "    delta = 1\n",
+    "\n",
+    "print(f\"stock_price = {stock_price}\")\n",
+    "print(f\"Minkurs = {Minkurs}\")\n",
+    "print(f\"Maxkurs = {Maxkurs}\")\n",
+    "print(f\"Schritte = {Schritte}\")\n",
+    "print(f\"ZentralKurs = {ZentralKurs}\")\n",
+    "print(f\"volatility_Laufzeit = {volatility_Laufzeit}\")\n",
+    "\n",
+    "\n",
+    "# Second stage\n",
+    "# Create Basis column that will be used for multiple tables\n",
+    "Basis = pd.Series((Minkurs + np.arange(int(Schritte) +1)* Schritt)[::-1])\n",
+    "\n",
+    "# Transform series into dataframe to make dataframe creation easier \n",
+    "Basis_df = Basis.reset_index().rename(columns={0:\"Basis\"})[[\"Basis\"]]\n",
+    "\n",
+    "\n",
+    "# Ueberhaenge_df, Summery_df are created from a copy of the same Dataframe\n",
+    "# so they have the same index. It means they could be in one  Dataframe but\n",
+    "#  I decided to keep them separated as they were in the VBA code.\n",
+    "\n",
+    "Ueberhaenge_df = Basis_df.copy()\n",
+    "Summery_df = Basis_df.copy()\n",
+    "\n",
+    "for productdate_idx in [0,1]:\n",
+    "    for busdate_idx in [0,1]:\n",
+    "\n",
+    "        if (busdate_idx == 1) and (productdate_idx == 1):\n",
+    "            continue\n",
+    "\n",
+    "        # Create dataframe with the just requested data\n",
+    "        aux_df = Basis_df.copy()\n",
+    "\n",
+    "        aux_df = aux_df.merge(\n",
+    "            dict_prod_bus[productdate_idx][busdate_idx],\n",
+    "            left_on = \"Basis\",\n",
+    "            right_on = \"strike\",\n",
+    "            how= \"left\"\n",
+    "        )\n",
+    "\n",
+    "        if productdate_idx == 0:\n",
+    "            Ueberhaenge_df[busdate_idx] = aux_df.openInterest_PF - aux_df.openInterest_CF\n",
+    "\n",
+    "            if busdate_idx == 0:\n",
+    "                Summery_df[\"openInterest_PF\"] = aux_df[\"openInterest_PF\"]\n",
+    "                Summery_df[\"openInterest_CF\"] = aux_df[\"openInterest_CF\"]\n",
+    "        \n",
+    "        elif productdate_idx == 1:\n",
+    "            if busdate_idx == 0:\n",
+    "                Ueberhaenge_df[\"nextContract\"] = aux_df.openInterest_PF - aux_df.openInterest_CF\n",
+    "                Summery_df[\"nextContract\"] = Ueberhaenge_df[\"nextContract\"]\n",
+    "\n",
+    "\n",
+    "Ueberhaenge_df.rename(columns = {0 : \"Front\"},inplace=True)\n",
+    "Ueberhaenge_df.rename(columns = {1 : \"Last\"},inplace=True)\n",
+    "\n",
+    "\n",
+    "Summery_df[\"heute\"] = Ueberhaenge_df[\"Front\"] * (1 / KontraktWert) * delta\n",
+    "Summery_df[\"last_day\"] = Ueberhaenge_df[\"Last\"] * (1 / KontraktWert) * delta\n",
+    "\n",
+    "Ueberhaenge_df[\"Summe\"] = Ueberhaenge_df[[\"Front\", \"nextContract\"]].sum(axis=1)\n",
+    "Ueberhaenge_df = Ueberhaenge_df[['Basis', 'Summe',\"Last\",'Front', \"nextContract\"]]\n",
+    "\n",
+    "\n",
+    "Summery_df[\"Änderung\"] = Summery_df.heute - Summery_df.last_day\n",
+    "\n",
+    "if (delta == 1):\n",
+    "    Summery_df['nextContract'] =  Summery_df['nextContract'] / 2\n",
+    "\n",
+    "SummeryDetail_df = Summery_df[(Summery_df.Basis >= DetailMin) & (Summery_df.Basis < (DetailMax + Schritt))]\n",
+    "\n",
+    "# Third stage\n",
+    "SchrittWeite = 10\n",
+    "InterestRate = 3.798/100\n",
+    "volatility = 16.35/100\n",
+    "\n",
+    "print(f\"volatility = {volatility}\")\n",
+    "print(f\"InterestRate = {InterestRate}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tage = tage_bis_verfall\n",
+    "if Tage == 0:\n",
+    "    Tage = 0.5\n",
+    "\n",
+    "Tage_1 = (expiry_1 - heute).days +1\n",
+    "Kurs_count = int(Spannweite/SchrittWeite)+1 \n",
+    "HedgeBedarf_kurs=  pd.DataFrame(Maxkurs - np.arange(Kurs_count)* SchrittWeite,columns= [\"Basis\"])\n",
+    "\n",
+    "\n",
+    "Hedge_dimensions = Kurs_count,int(Schritte+1)\n",
+    "HedgeBedarf_values = np.zeros(Hedge_dimensions)\n",
+    "HedgeBedarf1_values = np.zeros(Hedge_dimensions)\n",
+    "\n",
+    "\n",
+    "for k in range(Hedge_dimensions[1]):\n",
+    "    Basis_value = Basis[k]\n",
+    "    Kontrakte = Ueberhaenge_df.loc[k,\"Front\"]\n",
+    "    Kontrakte_1 = Ueberhaenge_df.loc[k,\"nextContract\"]\n",
+    "    for i in range(Hedge_dimensions[0]):\n",
+    "        Kurs = Maxkurs - i * SchrittWeite\n",
+    "        #print(Kurs)\n",
+    "        # In python np.log = natural log\n",
+    "        h1 = np.log(Kurs / Basis_value)\n",
+    "        if auswahl == 0:\n",
+    "            sigma = volatility * ((Tage / volatility_Laufzeit) ** 0.5)\n",
+    "        else:\n",
+    "            sigma = volatility\n",
+    "\n",
+    "        sigma_1 = volatility * ((Tage_1 / volatility_Laufzeit) ** 0.5)\n",
+    "        h2 = InterestRate + sigma * sigma / 2\n",
+    "        h2_1 = InterestRate + sigma_1 * sigma_1 / 2\n",
+    "        d1 = (h1 + (h2 * (Tage / 365))) / (sigma * ((Tage / 365) ** 0.5))\n",
+    "        d1_1 = (h1 + (h2_1 * (Tage_1 / 365))) / (sigma_1 * ((Tage_1 / 365) ** 0.5))\n",
+    "        Phi = norm.pdf(d1, 0, 1)               \n",
+    "        Phi_1 = norm.pdf(d1_1 + 0.01, 0, 1)\n",
+    "        Gamma = Phi / (Kurs * (sigma * (Tage / 365) ** 0.5))\n",
+    "        Gamma_1 = Phi_1 / (Kurs * (sigma_1 * (Tage_1 / 365) ** 0.5))\n",
+    "        \n",
+    "        HedgeBedarf_values[i,k] = Gamma * Kontrakte / KontraktWert\n",
+    "        HedgeBedarf1_values[i,k] = Gamma_1 * Kontrakte_1 / KontraktWert\n",
+    "\n",
+    "\n",
+    "HedgeSum = HedgeBedarf_values.sum(axis=1)/2\n",
+    "HedgeSum_1 = HedgeBedarf1_values.sum(axis=1)/2\n",
+    "\n",
+    "HedgeBedarf_df = pd.DataFrame(data =HedgeBedarf_values, columns= Basis )\n",
+    "HedgeSum_df = pd.DataFrame(HedgeSum,columns=[\"HedgeSum\"])\n",
+    "HedgeBedarf_df = pd.concat([HedgeBedarf_kurs,HedgeSum_df,HedgeBedarf_df], axis=1)\n",
+    "\n",
+    "HedgeBedarf1_df = pd.DataFrame(data =HedgeBedarf1_values, columns= Basis)\n",
+    "HedgeSum1_df = pd.DataFrame(HedgeSum_1,columns=[\"HedgeSum\"])\n",
+    "HedgeBedarf1_df = pd.concat([HedgeBedarf_kurs,HedgeSum1_df,HedgeBedarf1_df], axis=1)\n",
+    "\n",
+    "# Fourth Stage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HedgeBedarf_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}HedgeBedarf\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})[['Basis', 'HedgeSum']]\n",
+    "HedgeBedarf_excel.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_df = HedgeBedarf_df[['Basis', 'HedgeSum']].merge(HedgeBedarf_excel, on = 'Basis',suffixes=('_py', '_excel'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Biggest difference between python and excel\n",
+    "(compare_df.HedgeSum_py - compare_df.HedgeSum_excel).abs().max()"
    ]
   }
  ],
@@ -77,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.17 (main, Jul  5 2023, 21:22:06) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
