--- a/eurex.ipynb
+++ b/eurex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,17 +28,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Vinicius\\anaconda3\\lib\\site-packages\\openpyxl\\reader\\excel.py:228: UserWarning: Unknown extension is not supported and will be removed\n",
+      "  ws_parser.bind_all()\n",
+      "c:\\Users\\Vinicius\\anaconda3\\lib\\site-packages\\openpyxl\\reader\\excel.py:228: UserWarning: Conditional Formatting extension is not supported and will be removed\n",
+      "  ws_parser.bind_all()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tage_bis_verfall = 18\n",
+      "stock_price = 15683\n",
+      "InterestRate = 0.03784\n",
+      "busdate_idx = 0   | productdate_idx = 0\n",
+      "busdate_idx = 1   | productdate_idx = 0\n",
+      "busdate_idx = 0   | productdate_idx = 1\n",
+      "busdate_idx = 1   | productdate_idx = 1\n"
+     ]
+    }
+   ],
    "source": [
     "# openpyxl will complain because extension is not .xlsx\n",
     "\n",
-    "auswahl = 1\n",
-    "excel_path = \"./excel_files/STOXX_OI-Abfrage 2023-09-06 V9.00.xlsm\"\n",
+    "#auswahl = 1\n",
+    "#excel_path = \"./excel_files/STOXX_OI-Abfrage 2023-09-06 V9.00.xlsm\"\n",
     "\n",
-    "#auswahl = 0\n",
-    "#excel_path = \"./excel_files/EUREX 2023-08-28.xlsm\"\n",
+    "auswahl = 0\n",
+    "excel_path = \"./excel_files/EUREX 2023-08-28.xlsm\"\n",
     "\n",
     "\n",
     "wb = load_workbook(excel_path, data_only=True, keep_vba=True)\n",
@@ -49,14 +73,21 @@
     "stock_price = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"X4\")).value\n",
     "InterestRate = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"N3\")).value\n",
     "ZentralKurs =  Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"C3\")).value   #round(stock_price/span)*span\n",
+    "volatility = Ueberhaenge_sheet.cell(*coordinate_to_tuple(\"N4\")).value\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "tage_bis_verfall = (expiry - heute).days #+ 1\n",
     "\n",
     "print(f\"tage_bis_verfall = {tage_bis_verfall}\")\n",
     "print(f\"stock_price = {stock_price}\")\n",
     "print(f\"InterestRate = {InterestRate}\")\n",
-    "\n",
-    "\n",
+    "print(f\"volatility = {volatility}\")\n",
+    "print(f\"InterestRate = {InterestRate}\")\n",
     "\n",
     "dict_auswahl_prefix = {\n",
     "    0 : \"\",\n",
@@ -97,9 +128,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heute = 2023-08-28 00:00:00\n",
+      "stock_price = 15683\n",
+      "Minkurs = 15000.0\n",
+      "Maxkurs = 17000.0\n",
+      "Schritte = 40\n",
+      "ZentralKurs = 16000\n",
+      "volatility_Laufzeit = 60\n",
+      "volatility = 0.1635\n",
+      "InterestRate = 0.03798\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"heute = {heute}\")\n",
     "# Create results folder in case they still were not created\n",
@@ -207,17 +254,12 @@
     "SummeryDetail_df = Summery_df[(Summery_df.Basis >= DetailMin) & (Summery_df.Basis < (DetailMax + Schritt))]\n",
     "\n",
     "# Third stage\n",
-    "SchrittWeite = 10\n",
-    "InterestRate = 3.798/100\n",
-    "volatility = 16.35/100\n",
-    "\n",
-    "print(f\"volatility = {volatility}\")\n",
-    "print(f\"InterestRate = {InterestRate}\")"
+    "SchrittWeite = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,9 +321,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Basis</th>\n",
+       "      <th>HedgeSum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17000</td>\n",
+       "      <td>-2.818409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16990</td>\n",
+       "      <td>-2.874342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16980</td>\n",
+       "      <td>-2.929748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16970</td>\n",
+       "      <td>-2.984558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16960</td>\n",
+       "      <td>-3.038702</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Basis  HedgeSum\n",
+       "0  17000 -2.818409\n",
+       "1  16990 -2.874342\n",
+       "2  16980 -2.929748\n",
+       "3  16970 -2.984558\n",
+       "4  16960 -3.038702"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HedgeBedarf_excel = pd.read_excel(excel_path, sheet_name = f\"{dict_auswahl_prefix[auswahl]}HedgeBedarf\",skiprows=3).rename(columns = {\"Unnamed: 0\" : \"Basis\", \"Unnamed: 2\" : \"HedgeSum\"})[['Basis', 'HedgeSum']]\n",
     "HedgeBedarf_excel.head()"
@@ -289,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,12 +409,358 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19759308912138263"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Biggest difference between python and excel\n",
     "(compare_df.HedgeSum_py - compare_df.HedgeSum_excel).abs().max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Basis</th>\n",
+       "      <th>HedgeSum_py</th>\n",
+       "      <th>HedgeSum_excel</th>\n",
+       "      <th>dif</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>15070.0</td>\n",
+       "      <td>7.193434</td>\n",
+       "      <td>6.995841</td>\n",
+       "      <td>0.197593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>15080.0</td>\n",
+       "      <td>7.222655</td>\n",
+       "      <td>7.025225</td>\n",
+       "      <td>0.197431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>15060.0</td>\n",
+       "      <td>7.159034</td>\n",
+       "      <td>6.961818</td>\n",
+       "      <td>0.197216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>15090.0</td>\n",
+       "      <td>7.246725</td>\n",
+       "      <td>7.049985</td>\n",
+       "      <td>0.196740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>15050.0</td>\n",
+       "      <td>7.119440</td>\n",
+       "      <td>6.923150</td>\n",
+       "      <td>0.196290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>15100.0</td>\n",
+       "      <td>7.265686</td>\n",
+       "      <td>7.070151</td>\n",
+       "      <td>0.195536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>15040.0</td>\n",
+       "      <td>7.074655</td>\n",
+       "      <td>6.879846</td>\n",
+       "      <td>0.194809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>15110.0</td>\n",
+       "      <td>7.279595</td>\n",
+       "      <td>7.085760</td>\n",
+       "      <td>0.193835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>15030.0</td>\n",
+       "      <td>7.024693</td>\n",
+       "      <td>6.831923</td>\n",
+       "      <td>0.192770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>15120.0</td>\n",
+       "      <td>7.288519</td>\n",
+       "      <td>7.096862</td>\n",
+       "      <td>0.191657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>15020.0</td>\n",
+       "      <td>6.969588</td>\n",
+       "      <td>6.779415</td>\n",
+       "      <td>0.190173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>15130.0</td>\n",
+       "      <td>7.292542</td>\n",
+       "      <td>7.103519</td>\n",
+       "      <td>0.189023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>15010.0</td>\n",
+       "      <td>6.909386</td>\n",
+       "      <td>6.722366</td>\n",
+       "      <td>0.187020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>15140.0</td>\n",
+       "      <td>7.291756</td>\n",
+       "      <td>7.105798</td>\n",
+       "      <td>0.185958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>6.844151</td>\n",
+       "      <td>6.660832</td>\n",
+       "      <td>0.183319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>15150.0</td>\n",
+       "      <td>7.286266</td>\n",
+       "      <td>7.103779</td>\n",
+       "      <td>0.182487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>15160.0</td>\n",
+       "      <td>7.276186</td>\n",
+       "      <td>7.097550</td>\n",
+       "      <td>0.178637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>15170.0</td>\n",
+       "      <td>7.261641</td>\n",
+       "      <td>7.087204</td>\n",
+       "      <td>0.174437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>15180.0</td>\n",
+       "      <td>7.242763</td>\n",
+       "      <td>7.072846</td>\n",
+       "      <td>0.169917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>15190.0</td>\n",
+       "      <td>7.219692</td>\n",
+       "      <td>7.054583</td>\n",
+       "      <td>0.165109</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Basis  HedgeSum_py  HedgeSum_excel       dif\n",
+       "193  15070.0     7.193434        6.995841  0.197593\n",
+       "192  15080.0     7.222655        7.025225  0.197431\n",
+       "194  15060.0     7.159034        6.961818  0.197216\n",
+       "191  15090.0     7.246725        7.049985  0.196740\n",
+       "195  15050.0     7.119440        6.923150  0.196290\n",
+       "190  15100.0     7.265686        7.070151  0.195536\n",
+       "196  15040.0     7.074655        6.879846  0.194809\n",
+       "189  15110.0     7.279595        7.085760  0.193835\n",
+       "197  15030.0     7.024693        6.831923  0.192770\n",
+       "188  15120.0     7.288519        7.096862  0.191657\n",
+       "198  15020.0     6.969588        6.779415  0.190173\n",
+       "187  15130.0     7.292542        7.103519  0.189023\n",
+       "199  15010.0     6.909386        6.722366  0.187020\n",
+       "186  15140.0     7.291756        7.105798  0.185958\n",
+       "200  15000.0     6.844151        6.660832  0.183319\n",
+       "185  15150.0     7.286266        7.103779  0.182487\n",
+       "184  15160.0     7.276186        7.097550  0.178637\n",
+       "183  15170.0     7.261641        7.087204  0.174437\n",
+       "182  15180.0     7.242763        7.072846  0.169917\n",
+       "181  15190.0     7.219692        7.054583  0.165109"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compare_df['dif'] = (compare_df.HedgeSum_py - compare_df.HedgeSum_excel).abs()\n",
+    "compare_df.loc[compare_df.dif.sort_values(ascending=False).index].head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Basis</th>\n",
+       "      <th>HedgeSum</th>\n",
+       "      <th>17000.0</th>\n",
+       "      <th>16950.0</th>\n",
+       "      <th>16900.0</th>\n",
+       "      <th>16850.0</th>\n",
+       "      <th>16800.0</th>\n",
+       "      <th>16750.0</th>\n",
+       "      <th>16700.0</th>\n",
+       "      <th>16650.0</th>\n",
+       "      <th>...</th>\n",
+       "      <th>15450.0</th>\n",
+       "      <th>15400.0</th>\n",
+       "      <th>15350.0</th>\n",
+       "      <th>15300.0</th>\n",
+       "      <th>15250.0</th>\n",
+       "      <th>15200.0</th>\n",
+       "      <th>15150.0</th>\n",
+       "      <th>15100.0</th>\n",
+       "      <th>15050.0</th>\n",
+       "      <th>15000.0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>15070.0</td>\n",
+       "      <td>7.193434</td>\n",
+       "      <td>-3.742549e-08</td>\n",
+       "      <td>-6.460170e-09</td>\n",
+       "      <td>-1.271307e-07</td>\n",
+       "      <td>-3.989586e-08</td>\n",
+       "      <td>-5.952543e-07</td>\n",
+       "      <td>-2.248877e-07</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>-0.000002</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.253148</td>\n",
+       "      <td>0.355788</td>\n",
+       "      <td>0.203268</td>\n",
+       "      <td>1.198706</td>\n",
+       "      <td>0.209132</td>\n",
+       "      <td>1.861008</td>\n",
+       "      <td>0.138998</td>\n",
+       "      <td>3.790032</td>\n",
+       "      <td>0.181298</td>\n",
+       "      <td>5.234002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 43 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Basis  HedgeSum       17000.0       16950.0       16900.0  \\\n",
+       "193  15070.0  7.193434 -3.742549e-08 -6.460170e-09 -1.271307e-07   \n",
+       "\n",
+       "          16850.0       16800.0       16750.0   16700.0   16650.0  ...  \\\n",
+       "193 -3.989586e-08 -5.952543e-07 -2.248877e-07 -0.000004 -0.000002  ...   \n",
+       "\n",
+       "      15450.0   15400.0   15350.0   15300.0   15250.0   15200.0   15150.0  \\\n",
+       "193  0.253148  0.355788  0.203268  1.198706  0.209132  1.861008  0.138998   \n",
+       "\n",
+       "      15100.0   15050.0   15000.0  \n",
+       "193  3.790032  0.181298  5.234002  \n",
+       "\n",
+       "[1 rows x 43 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HedgeBedarf_df.loc[[193]]"
    ]
   }
  ],
@@ -323,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17 (main, Jul  5 2023, 21:22:06) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.17"
   },
   "vscode": {
    "interpreter": {
