working before changes

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,6 @@ Add a bar graph to the side
 
 For DAX:
 	if tage_bis_verfall < 5: 
-		Use another template the doesn't have Put and Call
-		Center graph around stock_price with 10 values below and above
-		Keep only the sum of Hedge1 and Hedge on the graph
+		Use another template that doesn't have Put and Call OK
+		Center graph around stock_price with 10 values below and above OK
+		Keep only the sum of Hedge1 and Hedge on the graph OK
